--- a/oktober.html
+++ b/oktober.html
@@ -49,4 +49,34 @@
     .catch(err => console.log('Microphone access denied or not available:', err));
 </script>
 </body>
-</html>
+</html> 
+<div class="cake" id="cake">
+  <span class="candle lit">🕯</span>
+  <span class="candle lit">🕯</span>
+  <span class="candle lit">🕯</span>
+</div>
+<script>
+  const candles = document.querySelectorAll('.candle');
+
+  navigator.mediaDevices.getUserMedia({ audio: true })
+    .then(stream => {
+      const audioContext = new (window.AudioContext || window.webkitAudioContext)();
+      const source = audioContext.createMediaStreamSource(stream);
+      const analyser = audioContext.createAnalyser();
+      source.connect(analyser);
+      analyser.fftSize = 512;
+      const dataArray = new Uint8Array(analyser.frequencyBinCount);
+
+      function detectBlow() {
+        analyser.getByteFrequencyData(dataArray);
+        let sum = 0;
+        for(let i = 0; i < dataArray.length; i++) sum += dataArray[i];
+        if(sum > 10000) { // threshold tiupan, bisa diubah kalau terlalu sensitif
+          candles.forEach(c => c.classList.remove('lit')); // lilin padam
+        }
+        requestAnimationFrame(detectBlow);
+      }
+      detectBlow();
+    })
+    .catch(err => console.log('Microphone access denied:', err));
+</script>
